<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    app:cardCornerRadius="7dp"
    app:cardElevation="7dp"
    android:layout_margin="5dp">

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/collapsedRelLayout">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="220dp"
                android:id="@+id/bookImage"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtBookName"
                android:text="@string/book_name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_below="@+id/bookImage"
                android:layout_marginTop="7dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_down"
                android:layout_below="@+id/bookImage"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="7dp"
                android:id="@+id/btnArrowDown"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/collapsedRelLayout"
            android:id="@+id/ExpandableRelLayout"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:id="@+id/textAuthor"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_name"
                android:id="@+id/textAuthorName"
                android:layout_below="@+id/textAuthor"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/short_description"
                android:id="@+id/textShortDesc"
                android:layout_marginTop="7dp"
                android:layout_below="@+id/textAuthorName"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_up"
                android:layout_below="@+id/textShortDesc"
                android:layout_alignParentEnd="true"
                android:id="@+id/btnArrowUp"/>

            <TextView
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:layout_below="@+id/textShortDesc"
                android:layout_toStartOf="@+id/btnArrowUp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/Pink"
                android:textStyle="italic"
                android:visibility="gone"/>

        </RelativeLayout>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>