<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/new_rocker"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/textView"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <Button
        android:id="@+id/btnAllBooks"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/see_all_books"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btnCurrentlyReading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    <Button
        android:id="@+id/btnCurrentlyReading"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/currently_reading"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btnAlreadyRead"
        app:layout_constraintEnd_toEndOf="@+id/btnAllBooks"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnAllBooks"
        app:layout_constraintTop_toBottomOf="@+id/btnAllBooks" />

    <Button
        android:id="@+id/btnAlreadyRead"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/already_read"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btnWishList"
        app:layout_constraintEnd_toEndOf="@+id/btnCurrentlyReading"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnCurrentlyReading"
        app:layout_constraintTop_toBottomOf="@+id/btnCurrentlyReading" />

    <Button
        android:id="@+id/btnWishList"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/wishlist"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btnFavourites"
        app:layout_constraintEnd_toEndOf="@+id/btnAlreadyRead"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnAlreadyRead"
        app:layout_constraintTop_toBottomOf="@+id/btnAlreadyRead" />

    <Button
        android:id="@+id/btnFavourites"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/favourites"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btnAbout"
        app:layout_constraintEnd_toEndOf="@+id/btnWishList"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnWishList"
        app:layout_constraintTop_toBottomOf="@+id/btnWishList" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/btnFavourites"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnFavourites"
        app:layout_constraintBottom_toBottomOf="@+id/guideline7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

</androidx.constraintlayout.widget.ConstraintLayout>